--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,13 @@
-2009-04-19 N. Dan Smith (nathan@ndansmith.net)
+2009-04-19 Nathan Smith (nathan@nathansmith.me)
 	* tagger/models.py Continued refinement of parsing schema
 	
-2009-04-15 N. Dan Smith (nathan@ndansmith.net)
+2009-04-15 Nathan Smith (nathan@nathansmith.me)
 	* Ported to nongnu
 
-2009-04-12 N. Dan Smith (nathan@ndansmith.net)
+2009-04-12 Nathan Smith (nathan@nathansmith.me)
 	* Happy Easter!
 	* Added image files
 	* Started with very basic parsing schema for testing purposes
 	
-2009-04-11 N. Dan Smith (nathan@ndansmith.net)
+2009-04-11 Nathan Smith (nathan@nathansmith.me)
 	* Initialized project.
